Add configuration of enabled services and agents

--- a/dispatcher/res/dispatcher.conf
+++ b/dispatcher/res/dispatcher.conf
@@ -9,3 +9,17 @@ StateBoard.fileName stateBoard.html
 
 XbeeScannerService.timeout 9000
 XbeeScannerService.scanFrequency 10000
+
+Services.StateMonitor enable
+Services.Logger enable
+Services.Svg disable
+Services.StateBoard disable
+Services.WebSocket disable
+Services.XbeeScanner disable
+Services.XbeeResetter disable
+Services.Sms disable
+Services.Snmp enable
+
+Agents.Console enable
+Agents.ExternalEmergency disable
+Agents.Xbee disable
