First slide nearly finished

--- a/dispatcher/res/dispatcher.conf
+++ b/dispatcher/res/dispatcher.conf
@@ -9,6 +9,7 @@ StateBoard.fileName stateBoard.html
 
 XbeeScannerService.timeout 9000
 XbeeScannerService.scanFrequency 10000
+DvbService.controlFile /tmp/333.txt
 
 Services.StateMonitor enable
 Services.Logger enable
@@ -19,7 +20,8 @@ Services.XbeeScanner disable
 Services.XbeeResetter disable
 Services.Sms disable
 Services.Snmp enable
+Services.Dvb enable
 
 Agents.Console enable
-Agents.ExternalEmergency disable
+Agents.ServerRequest enable
 Agents.Xbee disable
