Make bitrix look tidy

--- a/dispatcher/res/dispatcher.conf
+++ b/dispatcher/res/dispatcher.conf
@@ -15,7 +15,7 @@ Services.StateMonitor enable
 Services.Logger enable
 Services.Svg disable
 Services.StateBoard disable
-Services.WebSocket disable
+Services.WebSocket enable
 Services.XbeeScanner disable
 Services.XbeeResetter disable
 Services.Sms disable
