Add shop order handling

--- a/dispatcher/res/dispatcher.conf
+++ b/dispatcher/res/dispatcher.conf
@@ -10,6 +10,7 @@ StateBoard.fileName stateBoard.html
 XbeeScannerService.timeout 9000
 XbeeScannerService.scanFrequency 10000
 DvbService.controlFile /tmp/333.txt
+SmsInboundMessageAgent.menuFile menu.xml
 
 Services.StateMonitor enable
 Services.Logger enable
@@ -25,3 +26,4 @@ Services.Dvb enable
 Agents.Console enable
 Agents.ServerRequest enable
 Agents.Xbee disable
+Agents.SmsInboundMessage enable
