--- a/dispatcher/res/dispatcher.conf
+++ b/dispatcher/res/dispatcher.conf
@@ -1,6 +1,8 @@
 # <?xml-stylesheet href="plan.css" type="text/css"?>
 XBee.comPort COM12
 XBee.baudRate 9600
+Sms.comPort /dev/ttyS0
+Sms.baudRate 9600
 
 Jetty.port 8089
 
@@ -26,4 +28,4 @@ Services.Dvb enable
 Agents.Console enable
 Agents.ServerRequest enable
 Agents.Xbee disable
-Agents.SmsInboundMessage enable
+Agents.SmsInboundMessage disable
