Add Arduino-bluetooth support

--- a/dispatcher/res/dispatcher.conf
+++ b/dispatcher/res/dispatcher.conf
@@ -3,6 +3,10 @@ XBee.comPort COM12
 XBee.baudRate 9600
 Sms.comPort /dev/ttyS0
 Sms.baudRate 9600
+Bluetooth.comPort /dev/ttyUSB0
+Bluetooth.baudrate 115200
+Dvb.octavepath /usr/bin/octave
+Dvb.octaweWorkingDir /home/exchange/root
 
 Jetty.port 8089
 
@@ -24,6 +28,7 @@ Services.XbeeResetter disable
 Services.Sms disable
 Services.Snmp enable
 Services.Dvb enable
+Services.Bluetooth enable
 
 Agents.Console enable
 Agents.ServerRequest enable
