--- a/dispatcher/res/dispatcher.conf
+++ b/dispatcher/res/dispatcher.conf
@@ -26,11 +26,11 @@ Services.WebSocket enable
 Services.XbeeScanner disable
 Services.XbeeResetter disable
 Services.Sms disable
-Services.Snmp enable
+Services.Snmp disable
 Services.Dvb enable
-Services.Bluetooth enable
+Services.Bluetooth disable
 
 Agents.Console enable
 Agents.ServerRequest enable
 Agents.Xbee disable
-Agents.SmsInboundMessage disable
+Agents.SmsInboundMessage enable
