Emergency dispatcher system staged

--- a/dispatcher/res/dispatcher.conf
+++ b/dispatcher/res/dispatcher.conf
@@ -3,10 +3,12 @@ XBee.comPort COM12
 XBee.baudRate 9600
 Sms.comPort /dev/ttyS0
 Sms.baudRate 9600
-Bluetooth.comPort /dev/ttyUSB0
+Bluetooth.comPort /dev/ttyUSB1
 Bluetooth.baudrate 115200
 Dvb.octavepath /usr/bin/octave
 Dvb.octaweWorkingDir /home/exchange/root
+MeshLogic.comPort /dev/ttyUSB0
+MeshLogic.baudrate 115200
 
 Jetty.port 8089
 
@@ -19,6 +21,7 @@ DvbService.controlFile /tmp/333.txt
 SmsInboundMessageAgent.menuFile menu.xml
 
 Services.StateMonitor enable
+Services.TimerStateChanger enable
 Services.Logger enable
 Services.Svg disable
 Services.StateBoard disable
@@ -28,7 +31,8 @@ Services.XbeeResetter disable
 Services.Sms disable
 Services.Snmp disable
 Services.Dvb enable
-Services.Bluetooth disable
+Services.Bluetooth enable
+Services.MeshLogic enable
 
 Agents.Console enable
 Agents.ServerRequest enable
