Stage dispatcher point

--- a/dispatcher/res/dispatcher.conf
+++ b/dispatcher/res/dispatcher.conf
@@ -30,11 +30,11 @@ Services.XbeeScanner disable
 Services.XbeeResetter disable
 Services.Sms disable
 Services.Snmp disable
-Services.Dvb enable
-Services.Bluetooth enable
-Services.MeshLogic enable
+Services.Dvb disable
+Services.Bluetooth disable
+Services.MeshLogic disable
 
 Agents.Console enable
 Agents.ServerRequest enable
 Agents.Xbee disable
-Agents.SmsInboundMessage enable
+Agents.SmsInboundMessage disable
